--- a/templates/template.hbs
+++ b/templates/template.hbs
@@ -27,11 +27,13 @@
                 {{#if lvl}}
                     <li class="item inventory-header flexrow">                        
                         <h3>{{#if section.isCantrip}}Cantrip{{else}}Spell Level {{lvl}}{{/if}}</h3>
+                        {{#if section.isCantrip}}{{else}}
                         <span class="spell-slots">
                             <input type="text" ${inputStyle} data-target="data.spells.spell{{lvl}}.value" value="{{section.value}}" placeholder="0"/>
                             /
                             <input type="text" ${inputStyle} data-target="data.spells.spell{{lvl}}.max" value="{{section.max}}" placeholder="0"/>
                         </span>
+                        {{/if}}
                     </li>
                 {{else}}
                     <li class="item inventory-header"><h3>Cantrips</h3></li>
