--- a/templates/item.hbs
+++ b/templates/item.hbs
@@ -1,6 +1,10 @@
 <li class="item flexrow fav-item" data-item-id="{{item._id}}">
-    <div class="item-name flexrow rollable">
-        <div class="item-image" style="background-image: url({{item.img}})"></div>
+    <div class="item-image flexrow rollable" style="background-image: url({{item.img}})"></div>
+    <div class="item-shortcuts flexrow">
+        {{#if item.hasAttack}} <span class="tag rollable attack" title="Roll Attack"><i class="ra ra-sword"></i></span> {{/if}}
+        {{#if item.hasDamage}} <span class="tag rollable damage" title="Roll Damage"><i class="fas fa-tint"></i></span> {{/if}}
+    </div>
+    <div class="item-name flexrow">        
         <h4>{{item.name}}{{item.spellPrepMode}}</h4>
     </div>
     <div class="labels">
@@ -25,6 +29,9 @@
         {{/if}}
     </div>
     <div class="item-detail item-controlls">
+        {{#if item.canPrep}}<a class="item-control item-toggle {{item.toggleClass}}" data-path="data.equipped" title="{{item.toggleTitle}}"><i class="fas fa-sun"></i></a>{{/if}}
+        {{#if item.isItem}}<a class="item-control item-toggle {{item.toggleClass}}" data-path="data.preparation.prepared" title="{{item.toggleTitle}}"><i class="fas fa-shield-alt"></i></a>{{/if}}
+        
         <a class="item-control item-edit" title="Edit Item" > <i class="fas fa-edit" ></i></a>
         <a class="item-control item-fav" title="Remove from favourites" > <i class="fas fa-sign-out-alt" ></i></a>
     </div>
